further flask developing

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,12 @@
 TESTING HTML
 <img src="{{ url_for('static', filename='plot.png') }}">
+<html>
+<body>
+
+    <div class="container">
+        <form action="/" method="POST">
+            <button onClick="window.location.reload();" type="button">Run Model</button>
+        </form>
+    </div>`
+</body>
+</html>
